sumbitted mini project

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <div id="main-content">
-      <h1>Task Lister Lite™️</h1>
+      <h1>Task Management For Dummies!... <br />Let's Go! 👊</h1>
+      <br />
+      <img
+        src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExNmkybzZhY25mZzZzcHA2cG9scTZ4ODZodm1vcTFueWZ4MDc2NThyeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/lgRNj0m1oORfW/giphy.webp"
+      />
 
       <form id="create-task-form" action="" method="POST">
         <label for="new-task-description">Task description:</label>
@@ -22,6 +26,7 @@
       </form>
 
       <div id="list">
+        <!-- li tag added via JS -->
         <h2>My Todos:</h2>
         <ul id="tasks"></ul>
       </div>
